# MyPersonalMap

./: .claudeignore  .env.example  .gitignore  BUILD_NOTES.md  CLAUDE.md  CRITICALITY_AGENT_INTEGRATION.md  CRITICITA.md  README.md  STRUCTURE.md  build_config.spec  pyproject.toml
.claude/: COMMANDS_REFERENCE.md  README.md  settings.json
.claude/agents/: backend-dev.md  database-expert.md  documentation-writer.md  test-engineer.md
.claude/commands/: add-endpoint.md  add-model.md  add-test.md  debug-spatial.md  document-api.md  setup-project.md
doc/: 00. Index.md  sources.md  tech-stack.md  use-cases.md  user-guide.md
doc/01. Getting Started/: 01. Quick Start.md
doc/02. Planning/: 02. Development Roadmap.md
doc/04. Implementation/: 02. API Documentation.md
doc/06. GUI/: 01. GUI Architecture.md
doc_backup_20251214_114920/: architecture.md  database-design.md  quick-start.md  setup-guide.md
docs/: CRITICITA.md  DESIGN_SYSTEM.md  INSTALL.md
docs/development/architecture/: 03. Mapping Services Comparison.md
docs/development/gui/: 01. GUI Architecture.md
docs/guides/getting-started/: 01. Quick Start.md  02. Setup Guide.md
docs/guides/reference/: 02. User Guide.md
pymypersonalmap/: main.py  requirements.txt
pymypersonalmap/config/: settings.py
pymypersonalmap/database/: session.py
pymypersonalmap/gui/: app.py  backend_manager.py  config_manager.py  error_handler.py  setup_wizard.py  splash.py  theme.py
pymypersonalmap/gui/components/: __init__.py  custom_button.py  custom_sidebar.py  map_viewer.py
pymypersonalmap/gui/layouts/: main_layout.py
pymypersonalmap/gui/themes/: mypersonalmap_theme.json
pymypersonalmap/models/: __init__.py  labels.py  marker.py  marker_label.py  user.py
pymypersonalmap/repository/: __init__.py  labels_repository.py  marker_repository.py  user_repository.py
pymypersonalmap/services/: geo_utils.py  label_service.py  marker_service.py  user_service.py
pymypersonalmap/tests/: __init__.py  conftest.py  test_geo_utils.py  test_gui_components.py  test_models.py
scripts/: AGENT_QUICKSTART.md  COMMIT_COMMAND_GUIDE.md  README.md  README_CRITICALITY_AGENT.md  build_linux.sh  build_macos.sh  build_windows.bat  criticality_agent.py
tests/: test_gui_components.py
